[gd_scene load_steps=12 format=3 uid="uid://drmsdxsktd4u3"]

[ext_resource type="Script" uid="uid://b446otpldm8r6" path="res://scripts/opponent_card.gd" id="1_80w62"]
[ext_resource type="Texture2D" uid="uid://bqr4jkqqv2ig7" path="res://assets/ArtCards/Rato da peste.png" id="2_80w62"]
[ext_resource type="Texture2D" uid="uid://dikhuc71e83ib" path="res://assets/CartaFundo.png" id="3_td6vg"]
[ext_resource type="Texture2D" uid="uid://cab0fe5vwt5yr" path="res://assets/CartaFundo2.png" id="4_hy522"]
[ext_resource type="Texture2D" uid="uid://b17cnmhjrnwrp" path="res://assets/sword_icon.png" id="5_td6vg"]
[ext_resource type="Texture2D" uid="uid://dpellvs6qscnf" path="res://assets/shield_icon.png" id="6_hy522"]
[ext_resource type="PackedScene" uid="uid://ipl1bdr5djsu" path="res://scenes/ui/CardDetailsPopup.tscn" id="7_hy522"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig7tw"]
size = Vector2(142, 202)

[sub_resource type="Animation" id="Animation_kg30u"]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attribute1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attribute2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardImageBack:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.16550925, 0.1706081)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardImage2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.228, 0.228)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardImageBack:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CardImage2:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("EnergyGenLabel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CostLabel:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CardImage:z_index")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CardImage:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.13, 0.13)]
}

[sub_resource type="Animation" id="Animation_ktuci"]
resource_name = "card_flip"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attribute1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attribute2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardImageBack:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.16550925, 0.1706081), Vector2(0.017, 0.171), Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardImage2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.228, 0.228), Vector2(0.023, 0.228), Vector2(0.228, 0.228)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EnergyGenLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CostLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CardImage:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 2]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CardImage:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.13, 0.13), Vector2(0.013, 0.13), Vector2(0.13, 0.13)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sy11y"]
_data = {
&"RESET": SubResource("Animation_kg30u"),
&"card_flip": SubResource("Animation_ktuci")
}

[node name="Card" type="Node2D"]
scale = Vector2(0.6, 0.6)
script = ExtResource("1_80w62")

[node name="CardImage2" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(0.228, 0.228)
texture = ExtResource("3_td6vg")

[node name="CardImage" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 2
position = Vector2(0, -17)
scale = Vector2(0.13, 0.13)
texture = ExtResource("2_80w62")

[node name="CardImageBack" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-0.50000095, 2.6226044e-06)
scale = Vector2(0.16550925, 0.1706081)
texture = ExtResource("4_hy522")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ig7tw")

[node name="Attribute1" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 0)
z_index = 2
offset_left = -70.0
offset_top = -101.0
offset_right = 0.5
offset_bottom = -0.5
scale = Vector2(2, 2)
text = "0"
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Attribute2" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 0)
z_index = 2
offset_left = -70.0
offset_top = -101.0
offset_bottom = -0.5
scale = Vector2(2, 2)
text = "0"
horizontal_alignment = 2
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="CostLabel" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 0)
z_index = 2
offset_left = -70.0
offset_top = -100.0
scale = Vector2(2, 2)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="EnergyGenLabel" type="RichTextLabel" parent="."]
visible = false
modulate = Color(0, 0, 0, 0)
z_index = 2
offset_left = -70.0
offset_top = -100.0
scale = Vector2(2, 2)
text = "+0 E"
horizontal_alignment = 1
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sy11y")
}

[node name="AttackIndicator" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.56425875, 0.17956334, 0.12340724, 1)
z_index = 5
position = Vector2(0.41665268, -29.583347)
scale = Vector2(0.28500003, 0.28500003)
texture = ExtResource("5_td6vg")

[node name="BlockIndicator" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.095408894, 0.48741263, 0.36702174, 1)
z_index = 6
position = Vector2(0.41666603, -29.583334)
scale = Vector2(0.285, 0.285)
texture = ExtResource("6_hy522")

[node name="HoverTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CardDetailsPopup" parent="." instance=ExtResource("7_hy522")]
visible = false
mouse_filter = 2

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
